# numerical-analysis

./: .gitignore  LICENSE
01-Newtons-Secant-Bisection-Method/: CMakeLists.txt  function.cpp  main.cpp  my_solver.h  program1_2.cpp  sp_program1_1.cpp  sp_program1_2.cpp
01-Newtons-Secant-Bisection-method/: CMakeLists.txt  program1_1.cpp  program1_3.cpp  sp_function.cpp
02-Probability-Density-Function/: CMakeLists.txt  main.cpp  sampling_table.txt
02-Probability-density-function/: CMakeLists.txt  generatePdf.cpp  my_solver.h  pdf_table.txt
03-Inverse-Transform-Sampling/: CMakeLists.txt  getPseudorandomNumber.cpp  main.cpp  my_solver.h  random_event_table.txt
03-Inverse-transform-sampling/: CMakeLists.txt  generateHistogram.cpp  generatePdf.cpp  histogram.txt  sampling_table.txt
04-Nonlinear-System/: 01-LU-Decomposition-Gaussian-Elimination.cpp  02-Find-Roots-Of-Real-Polynomial.cpp  03-Approximate-Jacobian-Example1.cpp  04-Approximate-Jacobian-Example2.cpp  04-Nonlinear-System.sln  04-Nonlinear-System.vcxproj  04-Nonlinear-System.vcxproj.filters  05-Approximate-Jacobian-Example3.cpp  06-Analytic-Jacobian-Example1.cpp  07-Analytic-Jacobian-Example2.cpp  08-Analytic-Jacobian-Example3.cpp  main.cpp  my_solver.cpp  my_solver.h
04-Nonlinear-System/fortran_source_files/: gespp.f  solve.f
04-Nonlinear-System/roots/: roots_02_1.txt  roots_02_2.txt  roots_02_3.txt  roots_02_4.txt  roots_02_5.txt  roots_02_6.txt  roots_03.txt  roots_04.txt  roots_05.txt  roots_06.txt  roots_07.txt  roots_08.txt
